<resources>
    <string name="app_name">Envisage</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">766052820707615</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb766052820707615</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">New Project</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Account</string>
    <string name="menu_share">Open Project</string>
    <string name="menu_send">Upload</string>
    <string name="login_activity_logo">Login activity logo</string>
</resources>
