<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sem2projectar_interface2.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sem2projectar_interface2.ui.NewProject.NewProjectFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_new_project" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sem2projectar_interface2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.sem2projectar_interface2.ui.Account.AccountFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.sem2projectar_interface2.ui.OpenProject.OpenProjectFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sem2projectar_interface2.ui.Upload.UploadFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_upload" />
</navigation>